# viratrace-he

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  disablescaling.sh  enablescaling.sh  format.sh
bench/: CMakeLists.txt
bench/include/: bench_utils.h
bench/src/: decrypt.cpp  encode.cpp  encoding.cpp  encrypt.cpp  multiply.cpp  multiply_inplace.cpp
include/: utils.h  vthe.h
reports/: Scratch.ipynb  decrypt.json  encode.json  format.sh  performance_plots.py  requirements.txt  setup.cfg
reports/data/: multiply.json
src/: utils.cpp  vthe.cpp
test/: all_test.cpp  vthe_inplace_test.cpp  vthe_test.cpp
